# mc-kube

./: logs.json  performance_optimisation.md  qtest.py  readme.md  run.bat  test.py
java-plugin/: .gitignore  build.gradle  settings.gradle
java-plugin/src/main/java/com/mckube/javaplugin/: Java_plugin.java  RestServer.java
java-plugin/src/main/java/com/mckube/javaplugin/controllers/: BroadcastController.java  HealthController.java  LogsController.java  MetricsController.java  PerformanceController.java  QueueController.java  ServerController.java  ServerManagementController.java  TransferController.java
java-plugin/src/main/java/com/mckube/javaplugin/models/: ManagedServer.java
java-plugin/src/main/java/com/mckube/javaplugin/services/: BroadcastService.java  LogsService.java  MetricsData.java  MetricsService.java  QueueListService.java  ServerListService.java  ServerManagementService.java  (+1 more)
java-plugin/src/main/templates/com/mckube/javaplugin/: BuildConstants.java
rust-backend/: Cargo.toml  Trunk.toml  index.html
rust-backend/src/: main.rs  utils.rs
rust-backend/src/pages/: mod.rs
rust-backend/src/pages/dashboard/: logic.rs  mod.rs  view.rs
rust-backend/src/pages/logs/: logic.rs  mod.rs  view.rs
rust-backend/src/pages/server_detail/: logic.rs  mod.rs  view.rs
rust-backend/src/pages/servers/: logic.rs  mod.rs  view.rs
rust-backend/static/: style.css
spigot-plugin/: .gitignore  build.gradle  settings.gradle
spigot-plugin/src/main/java/com/mckube/spigotplugin/: MetricsService.java  Spigot_plugin.java
spigot-plugin/src/main/resources/: plugin.yml
(+3 files in other folders)
