[package]
name = "minecraft-server-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-net = "0.4"
gloo-timers = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-console = "0.3.0"
