[package]
name = "minecraft-server-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-net = "0.4"
gloo-timers = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "CanvasGradient",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-console = "0.3.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "unpacked"